# Ironhack-Hackathon-Team-68

backend/: Cargo.toml
backend/src/: main.rs  prelude.rs
backend/src/content_generator/: content.rs  generators.rs  mod.rs  text.rs
backend/src/media/: convert.rs  mod.rs  transcribe.rs
backend/src/routing/: route.rs
lecturenuggets/: package-lock.json  package.json
lecturenuggets/src/: App.js
lecturenuggets/src/Navigation/: Nav_Comp.js  Navbar.css
lecturenuggets/src/Pages/: Dashboard.js  Dashboard.module.css  TeacherDashboard.css  TeacherDashboard.js  search_bar.css
