[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-openai = "0.10.3"
tokio = { version = "1", features = ["full"] }
thiserror = "1.0.40"
wav = "1.0.0"
serde = { version = "1.0", features = ["derive"] }
tracing-subscriber = "0.3"
tower-http = { version = "0.3.5", features = ["trace"] }
tracing = "0.1.37"
serde_json = "1.0"
axum = { version = "0.6.15", features = ["multipart"] }
cargo-watch = "8.4.0"
futures = "0.3.28"
futures-util = "0.3.28"
